# mini-CRM

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  exceptions.py  main.py
app/bots/: dao.py  models.py  router.py  schemas.py
app/clients/: dao.py  models.py  router.py  schemas.py
app/contacts/: dao.py  models.py  router.py  schemas.py  utils.py
app/dao/: base.py
app/operators/: dao.py  models.py  router.py  schemas.py
migrations/: env.py
migrations/versions/: 498f93b5ed56_update_bots_model_2.py  5d724b14ab78_update_models_for_bots.py  6acc0da8f736_update_bots_model_2.py  ab1d5b2e5233_init_migration.py
